# ca-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
src/application/controllers/: products_controller.py
src/application/schemas/: products.py
src/domain/entity/: products.py
src/domain/repository/: products_repository.py
src/domain/use_cases/: add_product.py  get_products.py
src/infra/database/: config.py
src/infra/database/models/: products.py
src/infra/http/: fastapi_server.py
src/infra/repository/: memory_repository.py  products_repository_postgres.py
tests/: conftest.py
tests/domain/entity/: test_products.py
tests/domain/use_cases/: test_add_product.py  test_get_products.py
