[tool.poetry]
name = "ca-python"
version = "0.1.0"
description = "Clean Archtecture in Python"
authors = ["Raimundo Neto <raimundoneto.rn17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
