[tool.poetry]
name = "ca-python"
version = "0.1.0"
description = "Clean Archtecture in Python"
authors = ["Raimundo Neto <raimundoneto.rn17@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.10"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
pre-commit = "^2.17.0"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.32"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
